--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -7,3 +7,7 @@
     background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
     border-radius: 5%;
 }
+
+.clickable {
+    cursor: pointer;
+}
